fix: spacing between graphs blocks

--- a/src/components/PlayerStats/ContentGraphs/FilteredGraphs/FilteredGraphs.module.scss
+++ b/src/components/PlayerStats/ContentGraphs/FilteredGraphs/FilteredGraphs.module.scss
@@ -105,10 +105,10 @@ h3 {
     }
   }
 
-	.dataValue {
-		display: flex;
-		align-items: center;
-	}
+  .dataValue {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .itemBody,
@@ -139,38 +139,42 @@ h3 {
   margin-top: 5px;
 }
 
-.graphsBlock > * + * {
-  margin-top: 5px;
+.graphsBlock {
+	line-height: 0;
+
+  > * + * {
+    margin-top: 5px;
+  }
 }
 
 .twinGraphsWrapper {
-	line-height: 0;
-	background-color: #fff;
-	display: flex;
-	flex-wrap: wrap;
+  line-height: 0;
+  background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
 
-	> div {
-		width: 50%;
+  > div {
+    width: 50%;
 
-		@media screen and (max-width: 1023px) {
-			width: unset;			
-		}
-	}
+    @media screen and (max-width: 1023px) {
+      width: unset;
+    }
+  }
 }
 
 .tempButton {
   position: absolute;
-  right: .5rem;
+  right: 0.5rem;
   top: 50%;
   transform: translateY(-50%);
-	background-color: rgb(225, 238, 243);
-	border: 1px solid var(--side-color);
-	padding: .25rem .5rem;
-	border-radius: 5px;
-	transition: all .15s;
-	box-shadow: 2px 2px 4px 1px #acacac;
-	
-	&:hover {
-		background-color: lightgreen;
-	}
+  background-color: rgb(225, 238, 243);
+  border: 1px solid var(--side-color);
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
+  transition: all 0.15s;
+  box-shadow: 2px 2px 4px 1px #acacac;
+
+  &:hover {
+    background-color: lightgreen;
+  }
 }
